# voxelgame

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
assets/: engine.toml
games/sandbox/: CMakeLists.txt
games/sandbox/assets/: game.toml
games/sandbox/assets/sandbox/materials/: triangle.toml
games/sandbox/src/: main.cpp
include/mellohi/core/: asset.hpp  color.hpp  config.hpp  engine.hpp  logger.hpp  types.hpp
include/mellohi/core/assets/: asset.hpp  asset_id.hpp  asset_manager.hpp  config_assets.hpp  toml_asset.hpp
include/mellohi/graphics/: graphics.hpp
include/mellohi/graphics/assets/: material.hpp  shader.hpp
include/mellohi/graphics/vulkan/: device.hpp  render_pass.hpp  swapchain.hpp  vulkan.hpp  vulkan_graphics.hpp
include/mellohi/graphics/vulkan/assets/: vulkan_material.hpp  vulkan_shader.hpp
include/mellohi/platform/: platform.hpp
include/mellohi/platform/glfw/: glfw_platform.hpp
src/mellohi/core/: asset.cpp  color.cpp  config.cpp  engine.cpp
src/mellohi/core/assets/: asset.cpp  asset_id.cpp  asset_manager.cpp  config_assets.cpp  toml_asset.cpp
src/mellohi/graphics/: graphics.cpp
src/mellohi/graphics/assets/: material.cpp  shader.cpp
src/mellohi/graphics/vulkan/: device.cpp  render_pass.cpp  swapchain.cpp  vulkan_graphics.cpp
src/mellohi/graphics/vulkan/assets/: vulkan_material.cpp  vulkan_shader.cpp
src/mellohi/platform/: platform.cpp
src/mellohi/platform/glfw/: glfw_platform.cpp
